app/assets/stylesheets/main.css.scss
@import 'bootstrap-sprockets';
@import 'bootstrap';
@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
$red: #8B001D;
$test: yellow;
$gray: #DFDFDF;


$text-color: #8B001D;
// this is the $red above

$text-color2: #4E3A3A;
// this is the old purple color
$background-color: #E9E9E9;
// $background-color2: #D3D3D3;
// this above is light gray


$background-color2: rgba(114,107,104,0.2);
// this above is a very light gray

// $background-color2: rgb(240,255,206);
// this above is a really annoying yellow green fluorescent

// $background-color2: rgb(176,185,197);
// this above is kind of a light blue

// $background-color2: #4E3A3A;
// this above is the dark purple brown

#about-us-section {
	max-width: 600px;
	h3 {
		padding: 15px;
		color: $red;
	}
}

.action-button {
	text-align: center;
	position: relative;
	top: 20px;
}

.action-button:after {
	margin-bottom: 30px;
}

.after-toggle {
	display: none;
	// for initially hiding down angle in dropdown toggle web_dev web_rates
}
.align-center {
	text-align: center;
}

.align-left {
	text-align: left;
}

.align-right {
	text-align: right !important;
}

.article-container {
	background: white;
	margin: 20px;
	padding: 20px;
	border-radius: 15px;
}

#articles_list li {
	list-style: none;
}

.articles_list {
	display: none;
}

#articles_summary {
	margin-top: 10px;
	margin-bottom: 15px;
}

#articles_summary :hover {
	color: blue;
}

#bignav {
	text-align: center !important;
	margin: 0 auto 0 auto;
	position: absolute;
	top: 20px;
	left: 70px;
}

#bignav ul li {
	text-align: center;
	list-style: none;
	display: block;
	float: left;
	padding: 15px;
	margin: 10px;
	font-weight: bold;
	font-size: 18px;
}

#bignav ul li :hover {
	color: black;
	text-decoration: none;
}

#bignav ul li a {
	color: #959293;
}

.black {
	color: black !important;
}

.block {
	display: block;
}

.blog-article {
	text-align: left;
	padding-left: 5%;
}

body {
	background-color: $background-color;
}

.border {
	border-radius: 5px;
	border: 1px solid #CCC;
	padding: 2px;
}

.btn-danger {
	background-color: $red;
	border: 1px soild $red;
}

.btn-default:hover {
	color: $red;
	border: $red solid 1px;
	background-color: white;
}

.clear {
	clear: both;
}

.container {

}

.dark-text {
	color: $text-color2;
}

#desktop_newsletter_button {
	margin: 15px;
	position: fixed;
	top: 3px;
	right: 3px;
	padding: 15px;
	background: $background-color;
	// background: inherit;
	z-index: 20;
}

.fa-twitter-square {
	font-size: 16px;;
	color: $red;
}

footer {
	text-align: right;
	border-top: 1px solid $gray;
}

footer a {
	color: $red;
}

.headline {
	font-family: 'Lobster', cursive;
	font-size: 60px;
}

@media only screen and (max-width: 991px) {


}

@media screen and (max-width: 475px) {
	.headline {
		font-size: 45px;
		text-indent: none;
		text-align: center;
	}
} 

h1 {
	// color: #E70000;
	color: $background-color2;
	padding: 20px;
	font-size: 60px;
}

h2 {
	font-family: 'Great Vibes', cursive;
	margin-top: -0.5em;

}

h3, h4, h5, h6 {
	color: $red;
}

.indent {
	text-indent: 3em;
}

.inline {
	display: inline;
}

li {
	list-style-type: square;
}

li a {
	color: black;
}

.light-padding {
	padding: 5px;
	margin: 5px;
}

.logo-100 {
	max-width: 100px;
}


// .logo-header {
// 	max-width: 120px;
// 	margin: 20px;
// 	position: absolute;
// 	left: 0;
// 	@media only screen and (max-width: 528px) {
		
// 	}
// 	@media only screen and (min-width: 529px) {
// 		position: relative;
// 		left: 30px;
// 	}
// }

@media only screen and (max-width: 991px) {
	#logo-upper-left-nav img {
		position: absolute;
		top: 0;
		left: 0;
		width: 70px;
		padding: 10px;
	}
}
@media only screen and (min-width: 992px) {
	#logo-upper-left-nav {
		position: absolute;
		top: 0;
		left: 0;
		padding: 15px;
	}
	#logo-upper-left-nav img {
		width: 90px;
	}
}

.logo-images {
	width: 300px;
	position: relative;
	margin: 0 auto 0 auto;
	/*bottom: 1em;
	top: 1em;
	left: 2em;
	margin-top: 10%;
	margin-bottom: 10%;*/
}

.logo-images-smaller {
	top: 5em;
}

.logo-images-xs {
	width: 70%;
	top: 3em;
	width: 200px;
	margin: 15px;
}

.main-container {
	width: 90%;
	text-align: center;
}

.modal-dialog {
	position: fixed;
	left: 10vw;
	right: 10vw;
}

#mce-EMAIL {
	border: none;
}

.move-down {
	position: relative;
	top: 20px;
	padding: 15px;
}

#nav-company-name {
	position: absolute;
	top: 0;
	margin: 0 auto 0 auto;
}

.nav-text {
	margin: 0 auto 0 auto;
	font-family: ‘Courier New’, Courier, monospace;	
}

#newsletter_modal_code_section a {
	padding: 10px;
}

#newsletter_modal_code_section div {
	padding: 10px;
}

#inputfield {
	width: 15em;
}

#newsletter_section {
	margin: 15px;
	text-align: right;
}

#newsletter_section div {

}

#newsletter_section input {
	padding: 5px;
}

#newsletter_section a {
	white-space: nowrap;
}

@media (max-width: 767px) {
// for small screens
	#newsletter_section {
		text-align: center;
	}
	#headline_container {

	}
}
@media (min-width: 766px) {

}

.no-wrap {
	white-space: nowrap;
}

.pages_about {
	main {
		background-color: $background-color2;
		height: 60vh;
		text-align: center;
	}
	p {
		color: $text-color2;
		font-size: 1.2em;
	}
	a {
		color: $text-color2;
	}
	a:hover {
		color: $text-color2;
	}
	h3 {
		color: $text-color2;
	}


}

.pages_web_dev {
	main {
		a:hover {
			text-decoration: none;
		}
		h1 {
			font-size: 24px;
			text-align: center;
			font-weight: 200;
			color: $text-color2;
		}
		h2 {
			font-family: tahoma;
			text-align: center;
			font-size: 26px;
			color: $red;
		}
		section {
			padding: 4em;
			text-align: left;
			ul {
				color: black;

			}
		}
		h3, h4, h5 {
			color: black;
		}

		.web-dev-tagline {
			margin-top: -8px;
			font-size: 24px;
			padding-bottom: 12px;
			font-weight: 200;
			
		}
	
		#dev_skills {
			background: $background-color;
		}

		#dev_portfolio {
			background: $background-color2;
			width: 100%;
			color: $background-color;
			h2 {
			
				font-size: 30px;
				text-align: center;
			
			}
			h3 {
				color: $text-color2;
				font-weight: 400;
			}
			.portfolio_item {
				text-align: left;
				padding: 3px;
				color: white;
			}

			.portfolio_item:hover {
				background: darken($background-color2, 7%);
				// gives hover effect to the whole item background
			}
			.portfolio_item .site_description {
				padding-left: 1em;

			}
			.portfolio-item-text-area {
				height: 15em;
			}
			@media only screen and (max-width: 767px) {
				.portfolio-item-text-area {
					height: auto;
				}		
			}
			@media only screen and (max-width: 670px) {
				// .inner-portfolio-div {
				// 	width: 100vw;

				// }
				// put sizing to make portfolio items 100% wide on xs screens here TODO
			}

			.inner-portfolio-div {
				padding: 20px;
			}


			a {
				color: $text-color2;
			}
			a:hover {
				color: $text-color2;
				text-decoration: none;
			}
			a:visited, a:active{
				text-decoration: none;
			}
		}

		#dev_rates {
			background: $background-color2;
			color: $text-color2;
			h3 {
				font-size: 20px;
			}
			h3, p {
				color: $text-color2;
			}
			.rate_category {
				cursor: pointer;
			}
			.rate_category_details {
				padding-left: 3em;

			}
			ul li {
				list-style: none;
				list-style-type: none;
			}
			a {
				color: $text-color2;
				font-style: italic;
			}
		}
		.rate_category_details {
			display: none;
		}

	}
}

@media only screen and (min-width: 992px) {
		 
}


.red {
	color: $red;
}

.smaller {
	transform: scale(0.8);
}

.social-media {

}

.social-media img {
	width: 40px;
}

.start_hidden {
	display: none;
}

.start_visible {
	
}

#title-md {
	color: $red;
	// width: 180px;
	padding: 20px 15px 15px 15px;
	text-align: center;
	display: block;
	width: 250px;
	font-size: 22px;
	white-space: none;
	margin: 0 auto;
	z-index: -2;
	margin-bottom: -65px;
	font-weight: 400;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	// @media only screen and (min-width: px) and (max-width: px) {
	// 	display: inline;
	// }

}


.tagline {
	display: block;
	position: relative;
	top: 90px;
	left: -110px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
	.tagline2 {
		position: relative;
		top: 90px;
	}
}

.this-page { /* for selecting nav on above xs size per page */
	color: #4B4140 !important;
	font-size: 19px;
	transition: 0.5s;
}

.transparent {
	opacity: 0.7;
}

ul {
	color: $red; /* red color for bullet points */
}

#ventures_section {
	background: $background-color;
	text-align: center;
}

#ventures_section a {
	text-align: center;
}

.white_background {
	background: white;
	border-radius: 5px;
	border: 1px solid #BDBEC0;
}

/* below for xs nav hover via hamburger, not a good choice for xs b/c touchscreens can't hover */

#hamburger {
	background: white;
	border: 1px solid #BDBEC0;
	text-align: left;
	border-radius: 5px;
	padding: 10px;
	width: 95px;
	font-size: 18px;
	white-space: none;
}

#xsnav:hover ul {
	display: block;
	transition: 5.0s ease-in;
}

#xsnav ul {
	width: 300px;
	text-align: left;
	text-indent: -2em;
	border-radius: 5px;
	border-right: 1px solid #BDBEC0;
	display: none;
	position: absolute;
	left: 10px;
	list-style-type: none;
}


#xsnav ul li {
	list-style-type: none;
	list-style: none;
	padding: 10px 30px;
	font-weight: bold;
	white-space: none;
	width: 100%;
	background: white;
	text-indent: 2em;
	border-left: 1px solid #BDBEC0;
}

#xsnav ul li:hover {
	list-style: none;
	background: #DFDFDF;
	white-space: none;

}

#xsnav ul li a:hover {
	text-decoration: none;
	color: $red;
}

// BELOW is for xs_nav_full_width styling

#xs_hamburger {
	color: $red;
	text-align: right;
	float: right;
	padding: 15px 20px;
	font-size: 2em;
}

#xs_hamburger:hover {
	background: #eeeeee;
}

// hamburger styling above ends and is cleared.

#xs_nav_no_js{
	width: 100%;
	display: none;
}


.xs_nav_full_width {
	position: relative;
	left: -3em;
	background: lighten($background-color, 7%);
	width: 115%;
	padding: 0.4em 0px;
	border-bottom: $gray solid 1px;
	list-style: none;
	list-style-type: none;
}

.xs_nav_full_width:hover {
	background: #eee;
	color: $red;
	text-decoration: none;
}

.xs_nav_full_width a {
	// color: black;
	font-size: 1.2em;
	color: $red;
}

/* end for hamburger nav */

/* web development page styles below */

/* end web dev page styles*/

